增加swagger 增加图片显示
