# Exchangeapp_backend/docs/swagger.json
@@ -105,6 +105,37 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "接口文档"
+                ],
+                "summary": "注册",
+                "parameters": [
+                    {
+                        "description": "传json数据",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                }
             }
         },
         "/api/exchangeRates/articles/{id}": {
@@ -118,7 +149,7 @@
                 "tags": [
                     "接口文档"
                 ],
-                "summary": "获取列表",
+                "summary": "根据ID获取新闻",
                 "parameters": [
                     {
                         "type": "integer",
@@ -140,6 +171,17 @@
         }
     },
     "definitions": {
+        "controllers.User": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Article": {
             "type": "object",
             "required": [
