# Exchangeapp_backend/models/user.go
@@ -1,14 +1,16 @@
 package models
 
 import (
+	"database/sql"
 	"time"
 )
 
 type User struct {
-	ID        uint `gorm:"primarykey"`
+	ID        uint  `gorm:"primarykey"`
+	Uid       int64 `gorm:"colmun:uid;default:NULL"`
 	CreatedAt time.Time
 	UpdatedAt time.Time
-	DeletedAt time.Time `gorm:"index"`
-	Username  string    `gorm:"unique"`
+	DeletedAt sql.NullTime `gorm:"index"`
+	Username  string       `gorm:"unique"`
 	Password  string
 }
